# KrishnaChaitanya1.github.io

./: .gitmodules  404.html  LICENSE  README.md  _config.yml  archives.html  authors.html  categories.html  config.yml  index.html  index.xml  my-first-post.html  pelicanconf.py  pyproject.toml  robots.txt  sitemap.xml  tags.html
.github/workflows/: gh-pages.yml  pelican-deploy.yml
Quotes, proverbs and liked sentences/: Quotes, proverbs and liked sentences.md
_posts/: 2025-04-06-welcome-to-jekyll.markdown
archives/: index.html
author/: krishna-chaitanya.html
books/: index.html  index.xml
books/books-currently-reading/: index.html
books/books-read-in-2019/: index.html
books/books-read-in-2020/: index.html
books/books-read-in-2021/: index.html
books/books-to-be-read/: index.html
books/page/1/: index.html
categories/: index.html  index.xml
category/: python.html
content/: first-post.md
content/books/: books-currently-reading.md  books-read-in-2019.md  books-read-in-2020.md  books-read-in-2021.md  books-to-be-read.md
content/games/: game-that-I-am-currently-playing.md
content/posts/: page.md
games/: index.html  index.xml
games/game-that-i-am-currently-playing/: index.html
games/page/1/: index.html
page/1/: index.html
posts/: index.html  index.xml
posts/page/: index.html
posts/page/1/: index.html
search/: index.html
tag/: pelican.html  publishing.html
tags/: index.html  index.xml
tags/books/: index.html  index.xml
tags/books/page/1/: index.html
tags/first/: index.html  index.xml
tags/first/page/1/: index.html
