[project]
name = "blog"
version = "0.1.0"
description = ""
authors = [
    {name = "Krishna Chaitanya Reddy V",email = "kchaitanya556@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "pelican (>=4.11.0,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
